--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "classnames": "^2.3.1",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-svg": "^13.0.6",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "webpack": "^5.38.1"
